2004-07-20  John Finlay  <finlay@moeraki.com>

	* codegen/codegen.py (write_enums) Fix bug causing segfault when
	loading pango module.

2004-07-20  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* gtk/gtk.override (_wrap_gtk_file_chooser_dialog_new): fixed a
	compilation error: 'window' variable should be 'parent'

2004-07-20  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk.override (_wrap_gtk_file_chooser_dialog_new): Simplify,
	fix name in exceptions and remove warning.

	* gobject/pygenum.c (pyg_enum_from_gtype): Fall back to int for
	unregistered enums.

	* gobject/pygflags.c (pyg_flags_from_gtype): Ditto

	* gobject/gobjectmodule.c (initgobject): Rename back to MainLoop, MainContext

2004-07-19  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/libglade.override (_wrap_glade_xml_new): Allow pydict to be unset.

2004-07-19  Johan Dahlin  <johan@gnome.org>

	* setup.py (MICRO_VERSION): 
	* configure.in: Post release version bump

=== PyGtk 2.3.93 ===
2004-07-19  Johan Dahlin  <johan@gnome.org>

	* NEWS: Update

	* gtk/gtk.override (_wrap_gtk_dialog_new_with_buttons): Return
	1/0, instead of flagvalue/0 to avoid GObject complains.
	(_wrap_gtk_dialog_run): Simplify

	* gtk/libglade.override: Subclass GladeXML so we can wrap
	lookup_type. Add a new optional argument to GladeXML.__init__ that
	is a mapping object that will be used to translate types. Thanks
	to Gustavo for helping out. This should make kiko somewhat
	happy. Fixes bug 140071

	* tests/enum.py (EnumTest.testWindowGetState): Fix, a window is
	really WITHDRAWN if it's not SHOWN and not ICONIFIED...

	* tests/common.py: Add .. and ../gobject when distcheck isn't ran

	* gobject/pygenum.c: Use a dict instead of a tuple for
	__enum_values__, so we can handle negative enum values (eg: GDK_NOTHING)

	* gobject/pyflags.c: Ditto for __flag_values__

	* gobject/pygparamspec.c (pyg_param_spec_getattr): reference count fixing

	* gobject/Makefile.am: 
	* setup.py: