@@ -1,3 +1,14 @@
+2004-07-21  Johan Dahlin  <johan@gnome.org>
+
+	* gobject/pygflags.c (pyg_flags_get_first_value_name) 
+	(pyg_flags_get_first_value_nick): Add, so Lorenzo can introspect
+	flags properly too
+	(pyg_flags_get_value_names, pyg_flags_get_value_nicks): Make this
+	a little bit more useful. All values can still be fetch
+	through __flags_values__
+
+	* tests/enum.py: Improve and extend to test most enum/flags operations
+
 2004-07-20  John Finlay  <finlay@moeraki.com>
 
 	* codegen/codegen.py (write_enums) Fix bug causing segfault when
